<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.santiagomarin.ejemploclase.RegistroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/registro"
        android:textSize="35dp"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textColor="@color/blue"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/santa"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/nombreUsuario"
        android:id="@+id/eNombreUsuario"
        android:textAlignment="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:id="@+id/eContrasena"
        android:textAlignment="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/eRepetir"
        android:hint="@string/repetir"
        android:inputType="textPassword"
        android:textAlignment="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:id="@+id/eCorreo"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse"
            android:id="@+id/bRegister"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/bCancelar"
            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>
