<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.santiagomarin.ejemploclase.MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/SantaRosaa"
                android:textColor="@color/cadetblue"
                android:textStyle="bold"
                android:textSize="35sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350sp"
                android:src="@drawable/paisaje"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paraiso"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350sp"
                android:src="@drawable/chorizo"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comida"
            android:textColor="@color/orangered"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_gravity="center_vertical"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350sp"
                android:src="@drawable/campesino"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gente"
                android:textColor="@color/brown"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
