<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.santiagomarin.ejemploclase.PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/usuario"
            android:textSize="35sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <ImageView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:src="@drawable/usser"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/nombreUsuario"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/tNombre"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/correo"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/tContrasena"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            />
    </LinearLayout>


</LinearLayout>
